Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>LS Plugin - Userstatus</h1>
-        <h2>Fast text status for user profile.</h2>
+        <h2>Текстовые статусы пользователей</h2>
 
         <section id="downloads">
           <a href="https://github.com/gowebpro/lsp-userstatus/zipball/master" class="btn">Download as .zip</a>
@@ -28,32 +28,63 @@
 
     <div class="container">
       <section id="main_content">
-        <h2>
-<a id="plugin-for-livestreet-cms" class="anchor" href="#plugin-for-livestreet-cms" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Plugin for <a href="http://livestreetcms.com/" title="LiveStreet CMS">LiveStreet CMS</a>
-</h2>
+        <h1>
+<a id="goweb-studio" class="anchor" href="#goweb-studio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="//goweb.pro/" title="goweb.pro">GoWeb Studio</a>
+</h1>
 
-<p>Attention
-To use this plugin requires <strong>Livestreet CMS version 1.0 or later</strong>.</p>
-
-<h2>
-<a id="about-project" class="anchor" href="#about-project" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About project</h2>
-
-<p>Добавляет простой текстовый статус в профиль пользователя</p>
+<hr>
 
 <h2>
-<a id="changelog" class="anchor" href="#changelog" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Changelog:</h2>
+<a id="О-проекте" class="anchor" href="#%D0%9E-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%B5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>О проекте</h2>
+
+<p>Добавляет простой текстовый статус в профиль пользователя.</p>
+
+<hr>
+
+<h2>
+<a id="Системные-требования" class="anchor" href="#%D0%A1%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%BD%D1%8B%D0%B5-%D1%82%D1%80%D0%B5%D0%B1%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Системные требования</h2>
+
+<p>Для работы плагина нужна версия <a href="//livestreetcms.com/" title="LiveStreet CMS">LiveStreet CMS</a> не ниже 1.0</p>
+
+<hr>
+
+<h2>
+<a id="Установка" class="anchor" href="#%D0%A3%D1%81%D1%82%D0%B0%D0%BD%D0%BE%D0%B2%D0%BA%D0%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Установка</h2>
+
+<ul>
+<li>Загрузить</li>
+<li>Распаковать</li>
+<li>Переименовать папку <code>lsp-userstatus</code> в <code>userstatus</code>
+</li>
+<li>Залить на FTP в папку plugins</li>
+<li>Активировать через админпанель</li>
+</ul>
+
+<hr>
+
+<h2>
+<a id="История-версий" class="anchor" href="#%D0%98%D1%81%D1%82%D0%BE%D1%80%D0%B8%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D0%B9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>История версий</h2>
 
 <p><strong>1.2:</strong></p>
 
 <ul>
-<li>Исправлена эпичная ошибка issue#1;</li>
+<li>Исправлена эпичная ошибка issue #1;</li>
 <li>Исправлен формат даты.</li>
 </ul>
 
-<h2>
-<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
+<p><strong>1.1:</strong></p>
 
-<p><a href="http://creativecommons.org/licenses/by-nc/3.0/" title="CC BY-NC"> <img src="http://i.creativecommons.org/l/by-nc/3.0/88x31.png" alt="CC BY-NC" title="CC BY-NC"> </a></p>
+<ul>
+<li>Исправлена глобальная ошибка, когда пользователь мог изменить статус любому другому пользователю;</li>
+<li>Мелкие изменения и доработки.</li>
+</ul>
+
+<hr>
+
+<h2>
+<a id="Лицензия" class="anchor" href="#%D0%9B%D0%B8%D1%86%D0%B5%D0%BD%D0%B7%D0%B8%D1%8F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Лицензия</h2>
+
+<p><a href="//creativecommons.org/licenses/by-nc/3.0/" title="CC BY-NC"> <img src="//i.creativecommons.org/l/by-nc/3.0/88x31.png" alt="CC BY-NC" title="CC BY-NC"> </a></p>
       </section>
     </div>
 
