Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
 <h2>
 <a id="История-версий" class="anchor" href="#%D0%98%D1%81%D1%82%D0%BE%D1%80%D0%B8%D1%8F-%D0%B2%D0%B5%D1%80%D1%81%D0%B8%D0%B9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>История версий</h2>
 
+<p><strong>1.3:</strong></p>
+
+<ul>
+<li>Добавлено событие в ленту Активности.</li>
+</ul>
+
 <p><strong>1.2:</strong></p>
 
 <ul>
